--- a/atividade.html
+++ b/atividade.html
@@ -62,15 +62,15 @@
     <h1>Feira de Profissões 2025</h1>
     <p style="text-align: center;">A Feira de Profissões 2025 tem como objetivo apresentar diferentes carreiras, 
     tirar dúvidas sobre o mercado de trabalho e ajudar os estudantes a descobrirem suas vocações.</p>
-    
+
+  
     <div style="margin-top:8px;">
         <button type="button" onclick="location.hash='programacao'">Ir para Programação</button>
         <button type="button" onclick="window.open('https://querobolsa.com.br/teste-vocacional-gratis','_blank')">Quero Bolsa</button>
         <button type="button" onclick="location.href='programacao_palestras.pdf'">Baixar PDF</button>
-      </div>
+        <button type="button" onclick="location.href='Sobre.html'">Sobre</button>
+        <button type="button" onclick="location.href='form.html'">formulario</button>
     </div>
-  
-    
 
     <!-- Listas -->
     <h2>Profissões em Destaque</h2>
